--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^2.3.0",
     "prisma": "^4.2.1",
     "response-time": "^2.3.2",
+    "uuid": "^8.3.2",
     "winston": "^3.8.1"
   }
 }
